@@ -1,3 +1,5 @@
+20080124
+	fix emu/port/devssl.c os/port/devssl.c not to keep the directory numbers(!)
 20080122
 	update appl/lib/db.b: allow for split i/o on pipes or tcp/ip; eliminate lock process
 	eliminate more unused identifier warnings (courtesy acme-sac)
